# nur

./: .pre-commit-config.yaml  Cargo.toml  README.md  nurfile  prek.toml
.github/workflows/: release-build.nu  release-draft.nu  release.nu  release.yml
nur-tests/: .broken-env  .env  nurfile  nurfile.local.nu  other-nurfile
nur-tests/.nur/autoload/: auto_loaded.nu
scripts/: nur-completions.bash  nur-completions.nu  nur-completions.zsh  nurify.nu
src/: args.rs  engine.rs  errors.rs  main.rs  names.rs  nu_plugin.rs  nu_version.rs  path.rs  state.rs
src/commands/: nur.rs
src/nu-scripts/: default_nur_config.nu  default_nur_env.nu
wix/: main.wxs
