[package]
name = "nur"
description = "nur - a taskrunner based on nu shell"
version = "0.24.0+0.112.1"
rust-version = "1.92.0"
edition = "2024"
license = "MIT"
homepage = "https://nur-taskrunner.github.io/docs/"
repository = "https://github.com/nur-taskrunner/nur"
readme = "README.md"
authors = ["David Danier <david.danier@gmail.com>"]
keywords = ["nu", "taskrunner", "development", "command-line", "utility"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
nu-cli = "0.112.2"
nu-cmd-extra = "0.112.2"
nu-cmd-lang = "0.112.2"
nu-command = { version = "0.112.2", default-features = false, features = ["os"] }
nu-engine = "0.112.2"
nu-explore = "0.112.2"
nu-parser = "0.112.2"
nu-protocol = "0.112.2"
nu-std = "0.112.2"
nu-utils = "0.112.2"
thiserror = "2.0.18"
miette = { version = "7.6", features = ["fancy-no-backtrace", "fancy"] }
nu-ansi-term = "0.50.3"
nu-path = "0.112.2"
dotenvy = "0.15.7"

[target.'cfg(not(target_os = "windows"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"], optional = true }

[features]
network = ["nu-command/network"]
native-tls = ["nu-command/native-tls"]
rustls-tls = ["nu-command/rustls-tls"]
static-link-openssl = ["dep:openssl"]
debug = []

default = ["rustls-tls", "network"]

[dev-dependencies]
tempfile = "3.23.0"

[profile.release]
opt-level = "s"     # Optimize for size
strip = "debuginfo"
lto = "thin"
