[package]
name = "nur"
description = "nur - a taskrunner based on nu shell"
version = "0.28.1+0.113.1"
rust-version = "1.93.1"
edition = "2024"
license = "MIT"
homepage = "https://nur-taskrunner.github.io/docs/"
repository = "https://github.com/nur-taskrunner/nur"
readme = "README.md"
authors = ["David Danier <david.danier@gmail.com>"]
keywords = ["nu", "taskrunner", "development", "command-line", "utility"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
nu-cli = "0.113.1"
nu-cmd-extra = "0.113.1"
nu-cmd-lang = "0.113.1"
nu-command = { version = "0.113.1", default-features = false, features = ["os"] }
nu-engine = "0.113.1"
nu-explore = "0.113.1"
nu-parser = "0.113.1"
nu-protocol = "0.113.1"
nu-std = "0.113.1"
nu-utils = "0.113.1"
nu-plugin = { version = "0.113.1", optional = true }
thiserror = "2.0.18"
miette = { version = "7.6", features = ["fancy-no-backtrace", "fancy"] }
nu-ansi-term = "0.50.3"
nu-path = "0.113.1"
dotenvy = "0.15.7"
ctrlc = "3.5"

[target.'cfg(not(target_os = "windows"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"], optional = true }

[features]
network = ["nu-command/network"]
native-tls = ["nu-command/native-tls"]
rustls-tls = ["nu-command/rustls-tls"]
static-link-openssl = ["dep:openssl"]
nu-plugin = ["dep:nu-plugin"]
debug = []

default = ["rustls-tls", "network", "nu-plugin"]

[dev-dependencies]
tempfile = "3.23.0"

[[bin]]
name = "nur"
path = "src/main.rs"

[[bin]]
name = "nu_plugin_nur"
path = "src/nu_plugin.rs"
required-features = ["nu-plugin"]

[profile.release]
opt-level = "s"     # Optimize for size
strip = "debuginfo"
lto = "thin"
